# 0lab

./: README.md
.github/workflows/: build-and-push-whois-api.yml  build-sitemap.yml  deploy-ckt.yml
ansible/: README.md  ansible.cfg  inventory.ini  shutdown_ws.local.yml
ckt/: .gitignore  Dockerfile  docker-compose.yml  wp-config.php
ckt/wp-content/themes/chekimthoa-theme/: style.css
docker-apps/zot-registry/: docker-compose.yml
dotfile/: README.md  bootstrap-ubuntu-24.04.sh
dotfile/tmux/: .tmux.conf
dotfile/tmux/scripts/: cpubar.sh  cputemp.sh  fanrpm.sh  membar.sh  netspeed.sh  power.sh
dotfile/vim/: .vimrc
dotfile/zsh/: .zshrc  .zshrc.local.example
sitemap/: .dockerignore  .gitignore  Dockerfile  app.py  prorun.sh  requirements-dev.txt  requirements.txt  run.sh  save.py
soliu-web/: .dockerignore  Dockerfile  package-lock.json  package.json
tmp/: main.go
whois-api/: .dockerignore  App.py  Dockerfile  README.md  note.md  pyproject.toml  requirements.txt
whois-api/.github/workflows/: build-and-push-zot.yml
